Wed Aug 13 13:47:05 2008  Koichi Sasada  <ko1@atdot.net>

	* vm.c: rewind cfp to show proper backtrace.
	  [ruby-dev:35820]

Wed Aug 13 13:09:09 2008  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* tool/make-snapshot: fix for clean up.

Wed Aug 13 11:45:51 2008  Akinori MUSHA  <knu@iDaemons.org>

	* vm_core.h: Declare rb_iseq_clone, which is used in class.c.

Wed Aug 13 11:39:19 2008  Tanaka Akira  <akr@fsij.org>

	* transcode.c (transcode_search_path): return the length of converter
	  path.
	  (load_transcoder_entry): renamed from load_transcoder.
	  (load_transcoder): new function for loding transcoder by encoding
	  names.
	  (rb_transcoding_open_by_transcoder): extracted from
	  rb_transcoding_open.
	  (rb_transcoding_open): use load_transcoder and
	  rb_transcoding_open_by_transcoder.
	  (rb_trans_open_by_transcoder_entries): new function.
	  (trans_open_i): construct entries array.
	  (rb_trans_open): use rb_trans_open_by_transcoder_entries.

Wed Aug 13 10:45:29 2008  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* tool/make-snapshot: try to find exported directory.

Wed Aug 13 10:16:35 2008  TAKAO Kouji  <kouji@takao7.net>

	* doc/NEWS: Mention the Readline.vi_editing_mode?,
	  Readline.emacs_editing_mode?, Readline::HISTORY[] and
	  Readline::HISTORY.clear change.

Wed Aug 13 08:03:02 2008  Tanaka Akira  <akr@fsij.org>

	* transcode.c (econv_primitive_convert): add output_size argument.

Wed Aug 13 07:41:03 2008  Tanaka Akira  <akr@fsij.org>

	* transcode.c (rb_trans_conv): report last transcode_obuf_full.
	  (econv_max_output): new method Encoding::Converter#max_output.

Wed Aug 13 02:46:01 2008  NARUSE, Yui  <naruse@ruby-lang.org>

	* error.c (rb_eEncCompatError): add Exception.

	* include/ruby/ruby.h: ditto.
	
	* encoding.c (rb_enc_check): use rb_eEncCompatError.

	* string.c (rb_enc_cr_str_buf_cat): ditto.

	* string.c (rb_str_sub_bang): ditto.

	* string.c (rb_str_hex): ditto.

	* string.c (rb_str_oct): ditto.
