@@ -1,3 +1,9 @@
+Wed Aug 13 14:00:19 2008  Nobuyoshi Nakada  <nobu@ruby-lang.org>
+
+	* common.mk (parse.c): generates parse.h together.
+
+	* id.c, id.h: use constants for parser tokens.
+
 Wed Aug 13 13:47:05 2008  Koichi Sasada  <ko1@atdot.net>
 
 	* vm.c: rewind cfp to show proper backtrace.
